@@ -1,0 +1,2 @@
+require 'rucola_support/controllers/rc_controller'
+require 'rucola_support/controllers/rc_window_controller'
